--- a/Scorpion/app/build.gradle
+++ b/Scorpion/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation platform(libs.androidx.compose.bom)
     implementation libs.androidx.constraintlayout.compose
     implementation libs.androidx.room.runtime
+    implementation libs.androidx.room.ktx
     ksp libs.androidx.room.compiler
     testImplementation libs.androidx.room.testing
     implementation libs.androidx.ui
