Added more settings
Use personalized colors and cheat by flipping inelligible card.

--- a/Scorpion/app/build.gradle
+++ b/Scorpion/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.material3
     implementation libs.androidx.constraintlayout
+    implementation libs.androidx.constraintlayout.compose.v101
     implementation libs.coil.svg
     implementation libs.coil.compose
     testImplementation libs.junit
