Replace cardDeck with drawables in view model
Also changed the cardGroups to hold a null drawable for spacers rather than a drawable with a null card.

Put the state in CardDrawable into a mutable state object and simplified the CardGroup composables.

--- a/Scorpion/app/build.gradle
+++ b/Scorpion/app/build.gradle
@@ -35,6 +35,12 @@ android {
         debug {
             applicationIdSuffix ".debug"
             debuggable true
+            minifyEnabled false
+            kotlin {
+                compilerOptions {
+                    freeCompilerArgs = ["-Xdebug"]
+                }
+            }
         }
     }
     compileOptions {
