--- a/Scorpion/app/build.gradle
+++ b/Scorpion/app/build.gradle
@@ -28,6 +28,8 @@ android {
     buildTypes {
         release {
             minifyEnabled true
+            //minifyEnabled false
+            //debuggable true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
 
