--- a/Scorpion/app/build.gradle
+++ b/Scorpion/app/build.gradle
@@ -50,6 +50,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += [
+                "-Xcontext-receivers"
+        ]
     }
     buildFeatures {
         viewBinding true
